// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correct summary for a multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $120,012,455.66
    .
  </h1>
</div>
`;

exports[`should return correct summary for a single expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
    .
  </h1>
</div>
`;
